create posterior distributions for the probability of president, accident

--- a/intercausal_reasoning.ipynb
+++ b/intercausal_reasoning.ipynb
@@ -16,7 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# simulate data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -24,12 +35,12 @@
    "source": [
     "PRESIDENT_PROBABILITY = .01\n",
     "ACCIDENT_PROBABILITY = .1\n",
-    "TRIALS = 100"
+    "TRIALS = 1000000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -50,8 +61,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "President Mean: 0.01\n",
-      "Accident Mean: 0.06\n"
+      "President Mean: 0.009838\n",
+      "Accident Mean: 0.100273\n"
      ]
     }
    ],
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -81,24 +92,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.13"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traffic Mean: 0.14487\n"
+     ]
     }
    ],
    "source": [
     "print( 'Traffic Mean: {}'.format(traffic.mean()) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# probabilities are no longer fixed values, but distributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_president_observed = sum(president)\n",
+    "times_president_not_observed = len(president) - times_president_observed\n",
+    "\n",
+    "president_probability_samples = np.random.beta(\n",
+    "    a=1 + times_president_observed, \n",
+    "    b=1 + times_president_not_observed, \n",
+    "    size=4567\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "times_accident_observed = sum(accident)\n",
+    "times_accident_not_observed = len(accident) - times_accident_observed\n",
+    "\n",
+    "accident_probability_samples = np.random.beta(\n",
+    "    a=1 + times_accident_observed, \n",
+    "    b=1 + times_accident_not_observed, \n",
+    "    size=4567\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# to compute things like P(y=1|a=1, p=0), well, it's logistic regression! \n",
+    "# then make counterfactual plots to examine how probability varies with inputs"
    ]
   }
  ],
