add latex for intercausal reasoning formulas, and placeholders for computation

--- a/intercausal_reasoning.ipynb
+++ b/intercausal_reasoning.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -119,13 +119,13 @@
     "president_probability_samples = np.random.beta(\n",
     "    a=1 + times_president_observed, \n",
     "    b=1 + times_president_not_observed, \n",
-    "    size=4567\n",
+    "    size=4000\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +137,7 @@
     "accident_probability_samples = np.random.beta(\n",
     "    a=1 + times_accident_observed, \n",
     "    b=1 + times_accident_not_observed, \n",
-    "    size=4567\n",
+    "    size=4000\n",
     ")"
    ]
   },
@@ -384,6 +384,88 @@
     "plt.fill_between(x, y_predicted_PI_lower_bound, y_predicted_PI_upper_bound, alpha=.1, color='green')\n",
     "plt.title('Counterfactual Predictions of P(Traffic = 1)')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $P(\\text{Accident = 1}\\ |\\ \\text{Traffic = 1})$\n",
+    "<br>\n",
+    "$\\begin{align*}\n",
+    "P(A = 1|T = 1)\n",
+    "  &= \\frac{P(T = 1 | A = 1)P(A = 1)}{P(T = 1)}\\\\\n",
+    "  &= \\frac{P(T = 1, A = 1)P(A = 1)}{P(A = 1)P(T = 1)}\\\\\n",
+    "  &= \\frac{P(T = 1, A = 1)}{P(T = 1)}\\\\\n",
+    "\\end{align*}$\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "$\\begin{align*}\n",
+    "P(T = 1, A = 1)\n",
+    "  &= \\sum_{P}P(P, A = 1, T = 1))\\\\\n",
+    "  &= P(P = 0, A = 1, T = 1) + P(P = 1, A = 1, T = 1)\\\\\n",
+    "  &= P(P = 0)P(A = 1)P(T = 1 \\ |\\  P = 0, A = 1) + P(P = 1)P(A = 1)P(T = 1 \\ |\\  P = 1, A = 1)\n",
+    "\\end{align*}$\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "$\\begin{align*}\n",
+    "P(T = 1)\n",
+    "  &= \\sum_{A, P}P(A, P, T = 1))\\\\\n",
+    "  &= \\sum_{A, P}P(A)P(P)P(T = 1\\ |\\ A, P))\\\\\n",
+    "  &=\n",
+    "    P(A = 0)P(P = 0)P(T = 1\\ |\\ A = 0, P = 0) + P(A = 0)P(P = 1)P(T = 1\\ |\\ A = 0, P = 1) + P(A = 1)P(P = 0)P(T = 1\\ |\\ A = 1, P = 0) + P(A = 1)P(P = 1)P(T = 1\\ |\\ A = 1, P = 1)\n",
+    "\\end{align*}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# computation here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# $P(\\text{Accident = 1}\\ |\\ \\text{Traffic = 1}, \\text{President = 1})$\n",
+    "<br>\n",
+    "$\\begin{align*}\n",
+    "P(A = 1\\ |\\ T = 1, P = 1)\n",
+    "  &= \\frac{P(A = 1, T = 1, P = 1)}{P(T = 1, P = 1)}\n",
+    "\\end{align*}$\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "$\\begin{align*}\n",
+    "P(A = 1, T = 1, P = 1)\n",
+    "  &= P(T = 1\\ |\\ A = 1, P = 1)P(A = 1)P(P = 1)\n",
+    "\\end{align*}$\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "$\\begin{align*}\n",
+    "P(T = 1, P = 1)\n",
+    "  &= \\sum_{A}P(A, P = 1, T = 1)\\\\\n",
+    "  &= P(A = 0, P = 1, T = 1) + P(A = 1, P = 1, T = 1)\n",
+    "\\end{align*}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# computation here"
    ]
   }
  ],
