--- a/intercausal_reasoning.ipynb
+++ b/intercausal_reasoning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -23,19 +23,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# simulate data"
+    "# Abstract\n",
+    "\n",
+    "The goal of this work is to perform simple intercausal reasoning on a 3-node Bayesian network.\n",
+    "<br>\n",
+    "<br>\n",
+    "![](figures/simple_bayesian_network.png)\n",
+    "\n",
+    "In this network, both the \"president being in town\" and a \"car accident on the highway\" exert influence over whether a traffic jam occurs. With this relationship in mind, we will try to answer two simple questions:\n",
+    "- \"What is the probability of an accident having occurred given that a traffic jam occurred?\"\n",
+    "- \"What is the probability of an accident having occurred given that a traffic jam occurred *and* the president is in town?\"\n",
+    "\n",
+    "We are given point estimates for all component probabilities which we can use to answer these questions. However, in the real world, we're just given data. As such, we use the given component probabilities (which we'd never actually know) to *simulate* this data, then use it to try to answer the questions at hand. This way, we'll build uncertainty into our answers as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define component probabilities"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -59,8 +75,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulate data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -84,9 +107,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "President Mean: 0.035\n",
-      "Accident Mean: 0.105\n",
-      "Traffic Mean: 0.25\n"
+      "President Mean: 0.045\n",
+      "Accident Mean: 0.095\n",
+      "Traffic Mean: 0.245\n"
      ]
     }
    ],
@@ -98,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -108,21 +131,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# probabilities are no longer fixed values, but distributions"
+    "## Compute $P(\\text{president})$ and $P(\\text{accident})$ posteriors\n",
+    "\n",
+    "One way to estimate the probability of the president being in town given observational data is to compute the observed proportion, i.e. if the president was seen in 4 of 200 trials, then the estimated probability = .02. Of course, this discards all *uncertainty* in our estimate (of which we have much). Uncertainty declines as the size of our data tends towards infinity, and 200 trials is not infinite.\n",
+    "\n",
+    "Instead, we can express our belief - uncertainty included - in the true probability of observing `president`, and that of observing `accident`, as a Beta distributed posterior. This follows trivially from the [Beta-Binomial conjugacy](https://dataorigami.net/products/bayesian-beta-binomial-model)*.\n",
+    "\n",
+    "\\*Accessing this video costs $9 CAD. This said, the author Cam Davidson Pylon's work on Bayesian statistics is excellent, and well-deserving of the fee. Alternatively, the Wikipedia page on [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) contains some cursory information about Beta-Binomial conjugacy under the \"Discrete distributions\" table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -138,9 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -155,19 +182,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# P(traffic | accident, president)"
+    "## Compute $P(\\text{Traffic}\\ |\\ \\text{President}, \\text{Accident})$ posterior\n",
+    "\n",
+    "This might look a little funky for those used to Bayesian parameter estimation for univariate systems - estimating $P(\\text{heads})$ given the results of 15 coinflips for example.\n",
+    "\n",
+    "So, how do we do this? Do we filter the data for all unique combinations of (`president`, `accident`), i.e. $(0, 0)$, $(0, 1)$, $(1, 0)$, $(1, 1)$? That way, we could estimate $P(\\text{traffic} = 1\\ |\\ \\text{president} = 0, \\text{accident} = 0)$, $P(\\text{traffic} = 1\\ |\\ \\text{president} = 1, \\text{accident} = 0)$, etc. In fact, this would work. But what if we added more variables? And what if the values are continuous? This would get messy quickly.\n",
+    "\n",
+    "In fact, modeling $P(\\text{Traffic}\\ |\\ \\text{President}, \\text{Accident})$ is none other than logistic regression. Think about it!\n",
+    "\n",
+    "Herein, we'll formulate our model as a vanilla Binomial regression, taking the form:\n",
+    "<br>\n",
+    "<br>\n",
+    "$$\n",
+    "\\text{traffic} \\sim \\text{Binomial}(1, p)\\\\\n",
+    "\\frac{p}{1 - p} = \\alpha + \\beta_P P + \\beta_A A\n",
+    "$$\n",
+    "\n",
+    "$P$ and $A$ represent `president` and `accident` respectively."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -190,9 +231,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estimated intercept: -1.2947\n",
-      "Estimated president coefficient: 1.3693\n",
-      "Estimated accident coefficient: 1.3275\n"
+      "Estimated intercept: -1.358\n",
+      "Estimated president coefficient: 1.0929\n",
+      "Estimated accident coefficient: 1.7341\n"
      ]
     }
    ],
