add more cosmetic changes, thank-you cell

--- a/intercausal_reasoning.ipynb
+++ b/intercausal_reasoning.ipynb
@@ -41,7 +41,7 @@
     "- \"What is the probability of an accident having occurred given that a traffic jam occurred?\"\n",
     "- \"What is the probability of an accident having occurred given that a traffic jam occurred *and* the president is in town?\"\n",
     "\n",
-    "We are given point estimates for all component probabilities which we can use to answer these questions. However, in the real world, we're just given data. As such, we use the given component probabilities (which we'd never actually know) to *simulate* this data, then use it to try to answer the questions at hand. This way, we'll build uncertainty into our answers as well."
+    "We are given point estimates for all component probabilities which we can use to answer these questions. However, in the real world, we're just given data. As such, we use the given component probabilities (which we'd never actually know) to simulate this data, then use it to try to answer the questions at hand. This way, we'll build uncertainty into our answers as well."
    ]
   },
   {
@@ -168,11 +168,11 @@
    "source": [
     "# Compute $P(\\text{president})$ and $P(\\text{accident})$ posteriors\n",
     "\n",
-    "One way to estimate the probability of the president being in town given observational data is to compute the observed proportion, i.e. if the president was seen in 4 of 200 trials, then the estimated probability = .02. Of course, this discards all *uncertainty* in our estimate (of which we have much). Uncertainty declines as the size of our data tends towards infinity, and 200 trials is not infinite.\n",
+    "One way to estimate the probability of the president being in town given observational data is to compute the observed proportion, i.e. if the president was seen in 4 of 200 trials, then the estimated probability is .02. Of course, this discards all *uncertainty* in our estimate (of which we have much). Uncertainty declines as the size of our data tends towards infinity, and 200 trials is not infinite.\n",
     "\n",
-    "Instead, we can express our belief - uncertainty included - in the true probability of observing `president`, and that of observing `accident`, as a Beta distributed posterior. This follows trivially from the [Beta-Binomial conjugacy](https://dataorigami.net/products/bayesian-beta-binomial-model)*.\n",
+    "Instead, we can express our belief - uncertainty included - in the true probability of observing `president`, and that of observing `accident`, as a Beta-distributed posterior. This follows trivially from the [Beta-Binomial conjugacy](https://dataorigami.net/products/bayesian-beta-binomial-model)*.\n",
     "\n",
-    "\\*Accessing this video costs $9 CAD. This said, the author Cam Davidson Pylon's work on Bayesian statistics is excellent, and well-deserving of the fee. Alternatively, the Wikipedia page on [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) contains some cursory information about Beta-Binomial conjugacy under the \"Discrete distributions\" table."
+    "\\*Accessing this video costs $9 CAD. This said, the author Cam Davidson-Pilon's work on Bayesian statistics is excellent, and well-deserving of the fee. Alternatively, the Wikipedia page on [conjugate priors](https://en.wikipedia.org/wiki/Conjugate_prior) contains some cursory information about Beta-Binomial conjugacy under the \"Discrete distributions\" table."
    ]
   },
   {
@@ -221,7 +221,7 @@
     "\n",
     "This might look a little funky for those used to Bayesian parameter estimation for univariate systems - estimating $P(\\text{heads})$ given the results of 15 coinflips, for example.\n",
     "\n",
-    "So, how do we do this? Do we filter the data for all unique combinations of (`president`, `accident`), i.e. $(0, 0)$, $(0, 1)$, $(1, 0)$, $(1, 1)$ then estimate in the same fashion as above? That way, we could estimate $P(\\text{traffic} = 1\\ |\\ \\text{president} = 0, \\text{accident} = 0)$, $P(\\text{traffic} = 1\\ |\\ \\text{president} = 1, \\text{accident} = 0)$, etc. In fact, this would work. But what if we added more variables? And what if the values are continuous? This would get messy quickly.\n",
+    "So, how do we do this? Do we filter the data for all unique combinations of (`president`, `accident`), i.e. $(0, 0)$, $(0, 1)$, $(1, 0)$, $(1, 1)$ then estimate in the same fashion as above? That way, we could estimate $P(\\text{traffic} = 1\\ |\\ \\text{president} = 0, \\text{accident} = 0)$, $P(\\text{traffic} = 1\\ |\\ \\text{president} = 1, \\text{accident} = 0)$, etc. In fact, this would work. But what if we added more variables? And what if the values were continuous? This would get messy quickly.\n",
     "\n",
     "In fact, modeling $P(\\text{Traffic}\\ |\\ \\text{President}, \\text{Accident})$ is none other than logistic regression. Think about it!\n",
     "\n",
@@ -484,7 +484,7 @@
     "\n",
     "For each unique combination of $(P, A)$ we have 8000 guesses at what $P(\\text{Traffic}\\ |\\ \\text{President}, \\text{Accident})$ is implied. For each set, we compute a mean and a 94% interval then plot against the observed proportion to see how we did.\n",
     "\n",
-    "Given that our data was generated randomly, it is possible that we don't observe any positive occurrences of `traffic` given varying values of `president` and `accident` - especially at $(T = 1\\ |\\ P = 1, A = 1)$. As such, there would be no data point in the following plot for the corresponding value of $x$.\n",
+    "Given that our data were generated randomly, it is possible that we don't observe any positive occurrences of `traffic` given varying values of `president` and `accident` - especially at $(T = 1\\ |\\ P = 1, A = 1)$. As such, there would be no data point in the following plot for the corresponding value of $x$.\n",
     "\n",
     "We can see that our model given the data is most sure about the probability of observing traffic given neither the president nor an accident. It is least sure about what happens with the former and without the latter. Finally, if the blue and green curves appear identical, do inspect the `y_observed` and `y_predicted_mean` objects to see what the true values are. (In most cases, they will not be identical even if they visually appear to be.)"
    ]
@@ -561,9 +561,9 @@
     "\n",
     "In the distributions that follow, we're able to express the *uncertainty* in our estimates of the true answer to each question. This allows us to:\n",
     "- **Contextualize our estimate.** Therein, we can make statements like: \"There are a ton of plausible values of this probability. If you're going to use it to make a decision or communicate it to others, please do so with caution and don't bet the farm.\" Conversely, if the following posterior were to be very narrow, we could say things like: \"There is a very narrow range of values that satisfy the model given the data. You can be very sure about this probability estimate - perhaps even share it with the CEO!\"\n",
-    "- **Make intelligent choices.** If we're going to make bets on traffic, i.e. decide how much money to invest in new urban infrastructure given an estimate of $P(\\text{Traffic}\\ |\\ \\text{President})$, different values of $P(\\text{Traffic}\\ |\\ \\text{President})$ will suggest different decisions, and each decision will carry a different cost. For example, concurring that the President's appearance causes traffic 80% of the time might lead us to building a new highway - expensive - while concurring 5% might lead us to simply opening the POV lane for the duration of his stay. So, given our estimate, a distribution, of $P(\\text{Traffic}\\ |\\ \\text{President})$, how do we know how much money we should budget for the project? This is a motivating example for Bayesian decision theory which, using the entire posterior, allows us to responsibly answer this question. In fact, it's a lot easier than it sounds. My favorite resource on the topic is Rasmus Bååth's [\"Probable Points and Credible Intervals, Part 2: Decision Theory\"](http://www.sumsar.net/blog/2015/01/probable-points-and-credible-intervals-part-two/).\n",
+    "- **Make intelligent choices.** If we're going to make bets on traffic, i.e. decide how much money to invest in new urban infrastructure given an estimate of $P(\\text{Traffic}\\ |\\ \\text{President})$, different values of $P(\\text{Traffic}\\ |\\ \\text{President})$ will suggest different decisions, and each decision will carry a different cost. For example, concurring that the President's appearance causes traffic 80% of the time might lead us to building a new highway - expensive - while concurring 5% might lead us to simply open the POV lane for the duration of his stay. So, given our estimate (a distribution) of $P(\\text{Traffic}\\ |\\ \\text{President})$, how do we know how much money we should budget for the project? This is a motivating example for Bayesian decision theory which, using the entire posterior, allows us to responsibly answer this question. In fact, it's a lot easier than it sounds. My favorite resource on the topic is Rasmus Bååth's [\"Probable Points and Credible Intervals, Part 2: Decision Theory\"](http://www.sumsar.net/blog/2015/01/probable-points-and-credible-intervals-part-two/).\n",
     "\n",
-    "Finally, we plot the point answer to each question computed from the original probabilities defined at the beginning of this notebook. This gives us an idea of how well were able to recover the initial generative process given only the simulated data."
+    "Finally, we plot the point answer to each question computed from the original probabilities defined at the beginning of this notebook. This gives us an idea of how well were able to recover the initial generative process given the simulated data."
    ]
   },
   {
@@ -789,15 +789,15 @@
     "# But didn't this all depend on how the dice were rolled?\n",
     "\n",
     "\n",
-    "To conclude, I'd like to give some basic context on the stochasticity of the generative process itself. We said above that the probability of observing an accident is `ACCIDENT_PROBABILITY = .12`. We then simulated 200 trials and observed a discrete count. While the expectation of this count is $200 * .12 = 24$ accidents observed, we could have also observed 23, or 31, or even (but implausibly) 0. Next, we used this data to infer a posterior distribution for the true value of `ACCIDENT_PROBABILITY`, and later plugged it in to the expressions corresponding to the original questions at hand. How much did the stochasticity of these trials impact the result?\n",
+    "To conclude, I'd like to give some basic context on the stochasticity of the generative process itself. We said above that the probability of observing an accident is `ACCIDENT_PROBABILITY = .12`. We then simulated 200 trials and observed a discrete count. While the expectation of this count is $200 * .12 = 24$ accidents observed, we could have in reality observed 23, or 31, or even (but implausibly) 0. Next, we used this data to infer a posterior distribution for the true value of `ACCIDENT_PROBABILITY`, and later plugged it in to the expressions corresponding to the original questions at hand. How much did the stochasticity of these trials impact the final result?\n",
     "\n",
-    "The following data cover 200 more trials. In each, we \"flip the coin\" 99 times, instead of 1 time as was done above. In each trial, we plot the inferred posterior distribution for the true probability of `accident`. The distribution of the median observed count is overlaid in bold.\n",
+    "The following data cover 199 more trials. In each, we \"flip the coin\" 99 times, instead of 1 time as was done above. In each trial, we plot the inferred posterior distribution for the true probability of `accident`. The distribution of given the median observed count is overlaid in bold.\n",
     "\n",
     "As is clear, the expected values of these posteriors can vary wildly! In fact, the left tails of some *barely touch* the right tails of others. By all accounts, this will absolutely affect our final estimates. Is there anything we can do about it?\n",
     "\n",
     "As yet, I see two options:\n",
     "- **Give an informative prior.** The canonical Beta-Binomial formulation we've used implies a flat prior - $\\text{Beta}(1, 1)$. A more informative prior would come from domain-level knowledge about how often traffic accidents occur.\n",
-    "- **Build a better model.** Perhaps there are other variables that directly contribute to accidents - weather, time of day, etc.? If such data were obtainable we should use them to try to explain the variance in our outcome `accident`. In fact, this is a much more general point for a future analysis: these are outside of the scope of our original graph itself.\n",
+    "- **Build a better model.** Perhaps there are other variables that directly contribute to accidents like weather, time of day, etc.? If such data were available we should use them to try to explain the variance in our outcome `accident`. Notwithstanding, this is a general point for a future analysis: the mentioned quantities are not actually found in our original graph itself.\n",
     "\n",
     "Finally, here's a fitting quote that makes me smile:\n",
     "> “And with real data, these models will never accurately recover the data-generating mechanism. At best, they describe it in a scientifically useful way.” - Richard McElreath"
@@ -807,7 +807,8 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
@@ -855,6 +856,13 @@
     "plt.title('Plausible Beta Posteriors of P(Accident = 1)', fontsize=15)\n",
     "plt.xlabel('Probability', fontsize=14)\n",
     "plt.ylabel('Density', fontsize=14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thanks for reading."
    ]
   }
  ],
